--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,5 @@ browser=chrome
 url=http://eurotech.study/login
 userTeacher=eurotech@gmail.com
 userPassword=Test12345!
+usernameStudent=jackbauer@gmail.com
+passwordStudent=Admin123
